# home-stock

./: .gitignore  Cargo.toml  README.md  build.rs
analysis/: 01-requirements.md  02-architecture.md  03-data-model.md  04-ui-flows.md
examples/: seed.rs
installer/: build-installer.ps1  home-stock.iss
src/: main.rs
src/app/: mod.rs  state.rs  theme.rs
src/app/views/: alerts.rs  checkinout.rs  history.rs  items.rs  mod.rs  reports.rs
src/db/: mod.rs  models.rs  queries.rs
