[package]
name = "home-stock"
version = "0.1.0"
edition = "2021"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[dependencies]
eframe = "0.34"
egui_extras = "0.34"
rusqlite = { version = "0.40", features = ["bundled"] }
chrono = "0.4"
csv = "1.4"
anyhow = "1.0"
rfd = "0.17"

[profile.release]
opt-level = 2
lto = true
strip = true
